Fix width 100% issue with section__percent-outer not lining up on smaller viewports

--- a/frontend/sass/components/_skills.scss
+++ b/frontend/sass/components/_skills.scss
@@ -189,7 +189,6 @@
 			backface-visibility: hidden;
 			position: relative;
 			background-color: var(--color-primary-4);
-			width: 100%;
 			height: $default-font-size;
 			transform: scale(0);
 			transform-origin: left;
