--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -663,7 +663,6 @@ body {
   backface-visibility: hidden;
   position: relative;
   background-color: var(--color-primary-4);
-  width: 100%;
   height: 1.6rem;
   transform: scale(0);
   transform-origin: left;
